testsuite/tests/partial-sigs/should_fail/NestedNamedExtraConstraintsWildcard.stderr

NestedNamedExtraConstraintsWildcard.hs:4:23: error:
    Named wildcard ‘_a’ not allowed in a constraint
      Extra-constraint wildcards must be anonymous
        e.g  f :: (Eq a, _) => blah
      in the type signature for ‘foo’
